@@ -1,5 +1,6 @@
 1.0-pre2
 Changed: Custom game categories no longer save their key name in the config (hopefully since they are no longer needed).
+Changed: The File Select Dialog will now start from the last place a file was selected.
 Fixed: Background pictures for games being one pixel off.
 Fixed: Double Dealing Character typo.
 Fixed: Custom banner checkbox not saving.
@@ -7,6 +8,8 @@ Fixed: Tab order for the controls.
 Fixed: Tray icon's custom games list adding games to their parent category.
 Fixed: Not changing the name while renaming custom games/categories would result in an error.
 Fixed: Adding the same custom game multiple times. (As long as the path is the exact same)
+Fixed: Expanding/Collapsing a custom game category deselecting it.
+Optimized code
 
 1.0-pre (06/03/2019)
 Added: Replay downloader. Includes 3 websites + manual link input.
